--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Kumbh+Sans:wght@700&family=Lora:ital,wght@0,400;0,600;0,700;1,600&family=News+Cycle:wght@700&family=Noticia+Text:ital,wght@1,700&family=Nunito+Sans:wght@300;400&family=Open+Sans:ital,wght@0,300;0,500;0,700;1,700&family=Poppins:ital@1&family=Rampart+One&family=Roboto+Slab:wght@300&family=Roboto:wght@100&family=Sora:wght@500;600&family=Urbanist:ital,wght@0,200;0,400;1,500&display=swap');*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+ background-image:url('https://e0.pxfuel.com/wallpapers/889/872/desktop-wallpaper-samsung-note-20-ultra-samsung-galaxy-note-20-ultra.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
+  font-family: 'Sora', sans-serif;
+  padding: 10px 20px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #5F00BA;
+  color:#fff;
+}
+  @media only screen and (min-width:600px)
+{
+  .nav {
+    font-size: 30px;
+}
+}
+@media only screen and (max-width:768px)
+{
+  .nav {
+    font-size: 5px;
+}
+}
+
+.btn{
+  background-color: transparent;
+  border: none;
+  color:#fff;
+}
+@media only screen and (min-width:600px)
+{
+  .btn {
+    font-size: 30px;
+}
+}
+@media only screen and (max-width:768px)
+{
+  .btn{
+    font-size: 16px;
+}
+}
+.form{
+  font-family: 'Sora', sans-serif;
+  padding: 20px 30px;
+  border: 5px dashed #6414af;
+  color:#5F00BA;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+ /* From https://css.glass */
+background: rgba(255, 255, 255, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(19px);
+-webkit-backdrop-filter: blur(19px);
+border: 1px solid rgba(255, 255, 255, 0.3);
+}
+@media only screen and (min-width:600px)
+{
+  .form{
+    font-size: 30px;
+    margin-top: 10%;
+}
+}
+@media only screen and (max-width:768px)
+{
+  .form {
+    margin-top: 20%;
+    font-size: 16px;
+}
+}
+.title{
+  font-family: 'Sora', sans-serif;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+}
+input{
+border:#5F00BA;
+}
+.btn-submit{
+  font-size: 15px;
+  padding: 10px 20px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  font-family: 'Sora', sans-serif;
+  text-align: center;
+  background-color: #5F00BA;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  color: #fff;
+}
+.btn-submit:hover{
+  border-radius: 20px;
+}
+.card{
+  font-family: 'Alkatra', cursive;
+  /* From https://css.glass */
+background: rgba(237, 255, 71, 0.704);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(242, 250, 13, 0.63);
+}
+.delete-btn{
+  background-color: transparent;
+  border: none;
+  color:#FF3C38;
+  font-size: 30px;
+}
+.update-btn{
+  background-color: transparent;
+  border: none;
+  color:#6CC551;
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-btn{
+  margin:20px;
+  gap:40px;
+ display: flex;
 }
